# haskell-101-cn

./: .gitignore  LICENSE  MATERIAL_CHECK_CHECKLIST.md  README.md  book.toml  outline.md
.github/workflows/: deploy.yml
docs/: content-creation-guide.md
exercises/week-00/solutions/: exercise-01-hello.hs  exercise-02-ghci.md
exercises/week-01/solutions/: Week01Challenges.hs  Week01Exercises.hs
exercises/week-01/tasks/: Week01Challenges.hs  Week01Exercises.hs
exercises/week-02/examples/: CardGame.hs
exercises/week-02/solutions/: Week02Challenges.hs  Week02Exercises.hs
exercises/week-02/tasks/: Week02Challenges.hs  Week02Exercises.hs
exercises/week-03/solutions/: Week03Challenges.hs  Week03Exercises.hs
exercises/week-03/tasks/: Week03Challenges.hs  Week03Exercises.hs
exercises/week-04/examples/: FileCounter.hs  README.md  SimpleCalculator.hs  TodoMini.hs
exercises/week-04/solutions/: Week04Challenges.hs  Week04Exercises.hs
exercises/week-04/tasks/: Week04Challenges.hs  Week04Exercises.hs
exercises/week-05/: TESTING.md
exercises/week-05/examples/: README.md  json-examples.hs  simple-http-client.hs
exercises/week-05/examples/module-demo/: Main.hs
exercises/week-05/examples/module-demo/Data/: Types.hs
exercises/week-05/examples/module-demo/Utils/: Math.hs  String.hs
exercises/week-05/solutions/: MyModule.hs  Week05Exercises.hs  json-parser-complete.md  weather-tool-complete.md
exercises/week-05/tasks/: MyModule.hs  Week05Exercises.hs
exercises/week-05/tasks/json-parser/: README.md  json-parser.cabal
exercises/week-05/tasks/json-parser/app/: Main.hs
exercises/week-05/tasks/json-parser/src/: CLI.hs  Config.hs  Validation.hs
exercises/week-05/tasks/weather-tool/: README.md  weather-tool.cabal
exercises/week-05/tasks/weather-tool/app/: Main.hs
exercises/week-05/tasks/weather-tool/src/: Display.hs  Types.hs  Weather.hs
exercises/week-06/examples/: README.md  error-handling-examples.hs  quickcheck-examples.hs
exercises/week-06/solutions/: Week06Exercises.hs  calculator-complete.md
exercises/week-06/tasks/: Week06Exercises.hs  Week06Tests.hs
exercises/week-06/tasks/calculator/: README.md  calculator.cabal
exercises/week-06/tasks/calculator/app/: Main.hs
exercises/week-06/tasks/calculator/src/: Calculator.hs
exercises/week-06/tasks/calculator/src/Calculator/: Types.hs
exercises/week-06/tasks/calculator/test/: CalculatorSpec.hs
exercises/week-07/examples/: README.md  address-tools.hs  blockfrost-client.hs  cardano-types.hs  parse-tx-example.hs
exercises/week-07/solutions/: README.md  Week07API-Solutions.hs  Week07Exercises-Solutions.hs
exercises/week-07/solutions/balance-checker-complete/: README.md  balance-checker.cabal
exercises/week-07/solutions/balance-checker-complete/app/: Main.hs
exercises/week-07/solutions/balance-checker-complete/src/: API.hs  Cache.hs  Display.hs  Types.hs
exercises/week-07/solutions/tx-explorer-complete/: README.md  tx-explorer.cabal
exercises/week-07/solutions/tx-explorer-complete/app/: Main.hs
exercises/week-07/solutions/tx-explorer-complete/src/: Display.hs  Export.hs  Parser.hs  Types.hs  Validator.hs
exercises/week-07/tasks/: SETUP-GUIDE.md  Week07API.hs  Week07Exercises.hs
exercises/week-07/tasks/balance-checker/: README.md  balance-checker.cabal
exercises/week-07/tasks/balance-checker/app/: Main.hs
exercises/week-07/tasks/balance-checker/src/: API.hs  Cache.hs  Display.hs  Types.hs
exercises/week-07/tasks/sample-data/: address-info.json  block.json  simple-tx.json  transaction.json  tx-with-metadata.json  utxos.json
exercises/week-07/tasks/tx-explorer/: README.md  tx-explorer.cabal
exercises/week-07/tasks/tx-explorer/app/: Main.hs
exercises/week-07/tasks/tx-explorer/src/: Display.hs  Export.hs  Parser.hs  Types.hs  Validator.hs
exercises/week-08/common/: CardanoAPI.hs  Display.hs  README.md  TestData.hs
exercises/week-08/projects/balance-monitor/: README.md  TASKS.md  balance-monitor.cabal
exercises/week-08/projects/balance-monitor/app/: Main.hs
exercises/week-08/projects/balance-monitor/src/: Monitor.hs
exercises/week-08/projects/balance-monitor/src/Monitor/: CLI.hs  Config.hs  Notify.hs  Query.hs  Storage.hs  Tracker.hs  Types.hs
exercises/week-08/projects/balance-monitor/test/: MonitorSpec.hs
exercises/week-08/projects/wallet-tool/: README.md  TASKS.md  wallet-tool.cabal
exercises/week-08/projects/wallet-tool/app/: Main.hs
exercises/week-08/projects/wallet-tool/src/: Wallet.hs
exercises/week-08/projects/wallet-tool/src/Wallet/: API.hs  Address.hs  Balance.hs  CLI.hs  Storage.hs  Transaction.hs  Types.hs
exercises/week-08/projects/wallet-tool/test/: WalletSpec.hs
exercises/week-08/reference/: README.md  balance-monitor-key-implementations.md  common-patterns.md  design-decisions.md  wallet-tool-key-implementations.md
exercises/week-08/solutions/: README.md
src/: README.md  SUMMARY.md
src/appendix/: teaching-guide.md
src/week-00-setup/: README.md  exercises.md  lecture.md
src/week-01-basics/: README.md  exercises.md  lecture.md
src/week-02-datatypes/: README.md  exercises.md  lecture.md
src/week-03-typeclasses/: README.md  exercises.md  lecture.md
src/week-04-monad-io/: README.md  exercises.md  lecture.md
src/week-05-modules/: README.md  exercises.md  lecture.md
src/week-06-testing/: README.md  exercises.md  lecture.md
src/week-07-cardano/: README.md  exercises.md  lecture.md
src/week-08-project/: README.md  evaluation.md  guide.md  project-1-wallet.md  project-2-monitor.md  showcase.md
week-00-setup/: README.md  lecture.md
week-00-setup/exercises/: README.md  exercise-01-hello.hs  exercise-02-ghci.md
