cabal-version:      2.4
name:               json-parser
version:            0.1.0.0
synopsis:           JSON 配置文件管理工具
description:        Week 5 练习项目：通用 JSON 配置文件管理工具
license:            MIT
author:             Haskell 101 Student
maintainer:         student@example.com
build-type:         Simple

library
    exposed-modules:  Config
                    , Validation
                    , CLI
    
    build-depends:    base ^>=4.18
                    , aeson ^>=2.2
                    , aeson-pretty ^>=0.8
                    , text ^>=2.0
                    , bytestring ^>=0.11
                    , containers ^>=0.6
    
    hs-source-dirs:   src
    default-language: Haskell2010
    
    ghc-options:      -Wall

executable json-parser
    main-is:          Main.hs
    
    build-depends:    base ^>=4.18
                    , json-parser
    
    hs-source-dirs:   app
    default-language: Haskell2010
    
    ghc-options:      -Wall
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

