cabal-version:      2.4
name:               weather-tool
version:            0.1.0.0
synopsis:           命令行天气查询工具
description:        Week 5 练习项目：使用 req 和 aeson 构建天气查询命令行工具
license:            MIT
author:             Haskell 101 Student
maintainer:         student@example.com
build-type:         Simple

-- 库部分
library
    exposed-modules:  Weather
                    , Types
                    , Display
    
    build-depends:    base ^>=4.18
                    , aeson ^>=2.2
                    , req ^>=3.13
                    , text ^>=2.0
                    , bytestring ^>=0.11
    
    hs-source-dirs:   src
    default-language: Haskell2010
    
    ghc-options:      -Wall

-- 可执行程序
executable weather-tool
    main-is:          Main.hs
    
    build-depends:    base ^>=4.18
                    , weather-tool
    
    hs-source-dirs:   app
    default-language: Haskell2010
    
    ghc-options:      -Wall
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

