cabal-version:      2.4
name:               calculator
version:            0.1.0.0
synopsis:           TDD Calculator Project - Week 6
description:        测试驱动开发实践：构建带错误处理的计算器
license:            MIT
author:             Haskell 101 Student
maintainer:         student@example.com
build-type:         Simple

library
    exposed-modules:  Calculator
                    , Calculator.Types
    
    build-depends:    base ^>=4.18
                    , mtl ^>=2.3
    
    hs-source-dirs:   src
    default-language: Haskell2010
    
    ghc-options:      -Wall

executable calculator
    main-is:          Main.hs
    
    build-depends:    base ^>=4.18
                    , calculator
    
    hs-source-dirs:   app
    default-language: Haskell2010
    
    ghc-options:      -Wall
                      -threaded

test-suite calculator-test
    type:             exitcode-stdio-1.0
    main-is:          CalculatorSpec.hs
    
    build-depends:    base ^>=4.18
                    , calculator
                    , hspec ^>=2.11
                    , QuickCheck ^>=2.14
    
    hs-source-dirs:   test
    default-language: Haskell2010
    
    ghc-options:      -Wall
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

