cabal-version:      2.4
name:               tx-explorer
version:            0.1.0.0
synopsis:           Cardano Transaction Explorer - Week 7 Project 2
description:        Parse and display Cardano transaction details beautifully
license:            MIT
author:             Haskell 101 Student
maintainer:         student@example.com
build-type:         Simple

library
    exposed-modules:  Parser
                    , Validator
                    , Display
                    , Export
                    , Types
    
    build-depends:    base ^>=4.18
                    , aeson ^>=2.1
                    , text ^>=2.0
                    , bytestring ^>=0.11
    
    hs-source-dirs:   src
    default-language: Haskell2010
    
    ghc-options:      -Wall

executable tx-explorer
    main-is:          Main.hs
    
    build-depends:    base ^>=4.18
                    , tx-explorer
                    , text
                    , bytestring
    
    hs-source-dirs:   app
    default-language: Haskell2010
    
    ghc-options:      -Wall
                      -threaded

