cabal-version:      3.0
name:               wallet-tool
version:            0.1.0.0
synopsis:           Cardano command-line wallet tool
description:        A command-line wallet tool for managing Cardano addresses, querying balances, and building transactions
license:            MIT
author:             Haskell 101 Student
maintainer:         student@example.com
category:           Blockchain
build-type:         Simple

common warnings
    ghc-options: -Wall

executable wallet-tool
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.18,
        wallet-tool
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:  
        Wallet.Types
        Wallet.Address
        Wallet.Balance
        Wallet.Transaction
        Wallet.Storage
        Wallet.API
        Wallet.CLI
        Wallet
    build-depends:    
        base ^>=4.18,
        aeson ^>=2.1,
        text ^>=2.0,
        bytestring ^>=0.11,
        req ^>=3.13,
        mtl ^>=2.3,
        containers ^>=0.6,
        time ^>=1.12,
        random ^>=1.2,
        directory ^>=1.3,
        filepath ^>=1.4
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite wallet-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          WalletSpec.hs
    build-depends:    
        base ^>=4.18,
        wallet-tool,
        hspec ^>=2.11
    hs-source-dirs:   test
    default-language: Haskell2010

